--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@angular/platform-browser": "^18.1.2",
     "@angular/platform-browser-dynamic": "^18.1.2",
     "@angular/router": "^18.1.2",
+    "d3": "^7.9.0",
     "just-validate": "^4.3.0",
-    "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -28,6 +28,9 @@
     "@angular-devkit/build-angular": "^18.1.2",
     "@angular/cli": "^18.1.2",
     "@angular/compiler-cli": "^18.1.2",
+    "@types/chart.js": "^2.9.41",
+    "@types/chartjs-plugin-annotation": "^0.5.5",
+    "@types/d3": "^7.4.3",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.19",
     "jasmine-core": "~5.1.0",
