--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
+   
   },
   "private": true,
   "dependencies": {
@@ -18,6 +19,7 @@
     "@angular/platform-browser": "^18.1.2",
     "@angular/platform-browser-dynamic": "^18.1.2",
     "@angular/router": "^18.1.2",
+    "esra-my-pyme": "file:",
     "d3": "^7.9.0",
     "just-validate": "^4.3.0",
     "ng2-charts": "^6.0.1",
@@ -42,4 +44,5 @@
     "tailwindcss": "^3.4.4",
     "typescript": "~5.5.4"
   }
+
 }
